Refactor, move to swagger compliant API
