# src/com/simplerecipemanager/resources/RecipesResource.java
@@ -1,83 +1,0 @@
-package com.simplerecipemanager.resources;
-
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.UUID;
-
-import javax.ws.rs.GET;
-import javax.ws.rs.POST;
-import javax.ws.rs.PUT;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.core.MediaType;
-
-import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBMapper;
-import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBScanExpression;
-import com.amazonaws.services.dynamodbv2.model.AttributeValue;
-import com.codahale.metrics.annotation.Timed;
-import com.google.common.base.Optional;
-import com.simplerecipemanager.core.Recipe;
-
-@Path("/recipes")
-public class RecipesResource {
-
-	public static final String FORMAT_JSON = "JSON";
-	public static final String FORMAT_YAML = "YAML";
-	private DynamoDBMapper mapper;
-
-	public RecipesResource(DynamoDBMapper mapper) {
-		this.mapper = mapper;
-	}
-
-	@GET
-	@Path("/{id}")
-	@Timed
-	@Produces(MediaType.APPLICATION_JSON)
-	public Recipe getRecipeForId(@PathParam("id") String id,
-			@QueryParam("format") Optional<String> format) {
-		return getRecipeForId(id, format.or(FORMAT_JSON));
-	}
-
-	@POST
-	@Timed
-	@Produces(MediaType.APPLICATION_JSON)
-	public Recipe saveNewRecipe(Recipe toSave) {
-		return validateAndSaveRecipe(toSave, UUID.randomUUID().toString());
-	}
-
-	@PUT
-	@Timed
-	@Produces(MediaType.APPLICATION_JSON)
-	public Recipe updateExisting(Recipe toEdit) {
-		return null;
-	}
-
-	@GET
-	@Timed
-	@Produces(MediaType.APPLICATION_JSON)
-	public Collection<Recipe> getRecipes(Optional<Integer> limit,
-			Optional<String> last) {
-		Map<String, AttributeValue> startKey = null;
-		if (last.isPresent()) {
-			startKey = new HashMap<>();
-			startKey.put(Recipe.HASH_KEY_NAME, new AttributeValue(last.get()));
-		}
-		return this.mapper.scan(Recipe.class, new DynamoDBScanExpression()
-				.withLimit(limit.or(100)).withExclusiveStartKey(startKey));
-	}
-
-	private Recipe getRecipeForId(String id, String format) {
-		UUID toLoad = UUID.fromString(id);
-		return this.mapper.load(Recipe.class, toLoad.toString());
-	}
-
-	private Recipe validateAndSaveRecipe(Recipe toSave, String idToSave) {
-		toSave.setId(idToSave);
-		this.mapper.save(toSave);
-		return toSave;
-	}
-
-}
